Add MySQL and Jakarta EE dependencies; refactor SessionFactory for property-based DB connection; enhance user authentication and credit management; update UI styles and improve error handling in JSPs.

--- a/src/main/resources/configFiles/beans.properties
+++ b/src/main/resources/configFiles/beans.properties
@@ -1,9 +1,14 @@
 #dataDao        = ma.bankati.dao.memoryDb.DataDao
-dataDao         = ma.bankati.dao.dataDao.fileDb.DataDao
+dataDao         = ma.bankati.dao.dataDao.DataDaoImpl
 #moneyService   = ma.bankati.service.moneyServices.servicePound.ServicePound
-moneyService    = ma.bankati.service.moneyServices.serviceDirham.ServiceDh
+moneyService    = ma.bankati.service.moneyServices.MoneyService
 #moneyService   = ma.bankati.service.moneyServices.serviceDollar.ServiceUSDollar
-authService     = ma.bankati.service.authentification.AuthentificationServiceImpl
-userDao         = ma.bankati.dao.userDao.UserDao
+authService     = ma.bankati.service.authentification.AuthentificationService
+userDao         = ma.bankati.dao.userDao.UserDaoImpl
 creditDao       = ma.bankati.dao.creditDao.CreditDaoImpl
-creditService   = ma.bankati.service.creditService.CreditServiceImpl
+creditService   = ma.bankati.service.creditService.CreditService
+
+datasource.url         = jdbc:mysql://localhost:3306/akramBank
+datasource.username    = root
+datasource.password    = Ab349184@$
+datasource.driver      = com.mysql.cj.jdbc.Driver
