--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,20 @@
 
   <dependencies>
 
+    <dependency>
+      <groupId>mysql</groupId>
+      <artifactId>mysql-connector-java</artifactId>
+      <version>8.0.33</version>
+    </dependency>
+    
+    <!-- Jakarta EE API -->
+    <dependency>
+      <groupId>jakarta.platform</groupId>
+      <artifactId>jakarta.jakartaee-api</artifactId>
+      <version>10.0.0</version>
+      <scope>provided</scope>
+    </dependency>
+    
     <!-- API JSTL -->
     <dependency>
       <groupId>jakarta.servlet.jsp.jstl</groupId>
