--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,28 +1,20 @@
-<!DOCTYPE web-app PUBLIC
- "-//Sun Microsystems, Inc.//DTD Web Application 2.3//EN"
- "http://java.sun.com/dtd/web-app_2_3.dtd" >
+<?xml version="1.0" encoding="UTF-8"?>
+<web-app xmlns="https://jakarta.ee/xml/ns/jakartaee"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd"
+         version="6.0">
 
-<web-app>
-  <display-name>Archetype Created Web Application</display-name>
-    <!--
-
-      <servlet>
-            <servlet-name>hc</servlet-name>
-            <servlet-class>ma.bankati.web.HomeController</servlet-class>
-            <load-on-startup>0</load-on-startup>
-      </servlet>
-
-
-      <servlet-mapping>
-            <servlet-name>hc</servlet-name>
-            <url-pattern>/home</url-pattern>
-      </servlet-mapping>
-
-    -->
-
-
-  <welcome-file-list>
-    <welcome-file>login</welcome-file>
-  </welcome-file-list>
-
+    <display-name>Bankati Web Application</display-name>
+    
+    <welcome-file-list>
+        <welcome-file>login</welcome-file>
+    </welcome-file-list>
+    
+    <!-- Define a Data Source -->
+    <resource-ref>
+        <res-ref-name>jdbc/bankatiDB</res-ref-name>
+        <res-type>javax.sql.DataSource</res-type>
+        <res-auth>Container</res-auth>
+    </resource-ref>
+    
 </web-app>
